--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
@@ -60,7 +60,7 @@
         <div class="card-header">
           {{fav.displayName}}
           <div class="action">
-            <a (click)="removeFavorites(topic)"><i class="material-icons">favorite </i> </a>
+            <a (click)="removeFavorites(topic)"> <mat-icon aria-label="I Loved It!" color="accent">favorite</mat-icon> </a>
           </div>
         </div>
         <div class="card-body">
