--- a/WEB/src/app/home/content-mgmnt/topics/topic.html
+++ b/WEB/src/app/home/content-mgmnt/topics/topic.html
@@ -4,21 +4,21 @@
       <div class="col-md-3 d-flex align-items-center search-container">
         <div class="home-search pt-3">
           <form>
-            <div class="form-group mb-4">
+            <div class="form-group">
               <label for="exampleInputEmail1">Select Class</label>
               <select class="form-control" (change)="onClassChange($event.target.value)" [value]="className">
                 <option value="">Select Class</option>
                 <option *ngFor="let class of classList">{{class.displayName}}</option>
               </select>
             </div>
-            <div class="form-group mb-4">
+            <div class="form-group">
               <label for="exampleInputEmail1">Select Subject</label>
               <select class="form-control" (change)="onSubjectChange($event.target.value)" [value]="subjectName">
-                <option value="">Select</option>
+                <option value="">Select Subject</option>
                 <option *ngFor="let subejct of classSubjectList">{{subejct.displayName}}</option>
               </select>
             </div>
-            <div class="form-group mb-4">
+            <div class="form-group">
               <label for="exampleInputEmail1">Select Chapter</label>
               <select class="form-control" (change)="onChapterChange($event.target.value)" [value]="chapterName">
                 <option value="">Select Chapter</option>
@@ -32,46 +32,195 @@
         </div>
       </div>
       <div class="col-md-9 body-content">
-        <div class="row">
-          <div class="col-md-9">
-            <form class="example-form">
-              <mat-form-field class="example-full-width">
-                <input matInput placeholder="Search Topics, Chapter, Subject or Class" [matAutocomplete]="auto"
-                  [formControl]="stateCtrl">
-                <mat-autocomplete #auto="matAutocomplete">
-                  <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
-                    <img class="example-option-img" aria-hidden [src]="state.flag" height="25">
-                    <span>{{state.name}}</span> |
-                    <small>Population: {{state.population}}</small>
-                  </mat-option>
-                </mat-autocomplete>
-              </mat-form-field>
-            </form>
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a [routerLink]="" (click)="goToHome()"><strong>Home</strong></a></li>
+            <li class="breadcrumb-item"><a [routerLink]="" (click)="viewSubjectListForClass(className)"><strong>{{
+                  className | uppercase }}</strong></a></li>
+            <li class="breadcrumb-item"><a [routerLink]="" (click)="viewChapterListForSubject(subjectName)"><strong>{{
+                  subjectName | uppercase }}</strong></a></li>
+            <li class="breadcrumb-item"><a [routerLink]="" (click)="viewTopicListForChapter(chapterName)"><strong>{{
+                  chapterName | uppercase }}</strong></a></li>
+          </ol>
+        </nav>
+        <div class="content-area">
+          <div class="primary-action mb-3">
+            <div class="row clearfix">
+              <div class="col-md-7 col-lg-6">
+
+
+              </div>
+              <div class="col-md-5 col-lg-6 text-right">
+                <button type="button" class="btn btn-warning" (click)="viewMyFavorites()">My Favorites</button>
+                <button type="button" class="btn btn-warning" (click)="mylastLesson()">Last Session</button>
+              </div>
+            </div>
           </div>
-          <div class="col-md-3">
-            <button mat-raised-button color="accent">Your Favorites</button>
-          </div>
-        </div>
-        <div class="container mt-4 recent-search">
-          <h3 class="small-title mb-3">Topics</h3>
-          <div class="row clearfix">
-            <div class="col-md-4" *ngFor="let topic of topicList">
-              <div class="card result-list">
-                <div class="card-header">
-                  <a (click)="playLessonForTopic(topic)">{{topic.displayName}}</a>
-                  <div class="action">
-                    <a (click)="markFavorites(topic)">
-                      <i class="material-icons"> favorite_border</i>
-                    </a>
+          <div class="row clearfix wh-bg">
+
+              <div class="col-md-12" *ngIf="displayView=='FAVTOPIC'">
+                  <div class="row">
+                    <div class="col-md-4 col-sm-6" *ngFor="let favTopic of favTopicList">
+                      <div class="book-tables waiter-list">
+                        <div class="media" (click)="playLessonForTopic(favTopic)">
+                          <div class="media-left">
+                            <img class="person-card-avatar" src="assets/images/class.jpg">
+                          </div>
+                          <div class="media-body">
+                            <h4 class="media-heading"><strong> {{favTopic.displayName}}</strong></h4>
+                          </div>
+                        </div>
+                        <ul>
+                          <li>
+                            <div class="text-left btn-holder">
+                              <button mat-icon-button matTooltip="Play Lesson" (click)="playLessonForTopic(favTopic)">
+                                <mat-icon aria-label="Play Lesson" color="primary">play_circle_filled_white</mat-icon>
+                              </button>
+                            </div>
+                          </li>
+                          <li>
+                            <div class="text-right btn-holder">
+                              <button mat-icon-button matTooltip="I loved it!" (click)="markFavorites(topic)">
+                                <mat-icon aria-label="I loved it!" color="accent">thumb_up</mat-icon>
+                              </button>
+                            </div>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="card-body">
-                  <a (click)="playLessonForTopic(topic)">
-                    <img src="{{topic.icon}}" alt="Avatar">
-                    <div class="container">
-                      <p>{{topic.description}}</p>
+
+
+
+
+            <div class="col-md-12" *ngIf="displayView=='TOPIC'">
+              <div class="row">
+                <div class="col-md-4 col-sm-6" *ngFor="let topic of topicList">
+                  <div class="book-tables waiter-list">
+                    <div class="media" (click)="playLessonForTopic(topic)">
+                      <div class="media-left">
+                        <img class="person-card-avatar" src="assets/images/class.jpg">
+                      </div>
+                      <div class="media-body">
+                        <h4 class="media-heading"><strong> {{topic.displayName}}</strong></h4>
+                      </div>
                     </div>
-                  </a>
+                    <ul>
+                      <li>
+                        <div class="text-left btn-holder">
+                          <button mat-icon-button matTooltip="Play Lesson" (click)="playLessonForTopic(topic)">
+                            <mat-icon aria-label="Play Lesson" color="primary">play_circle_filled_white</mat-icon>
+                          </button>
+                        </div>
+                      </li>
+                      <li>
+                        <div class="text-right btn-holder">
+                          <button mat-icon-button matTooltip="I loved it!" (click)="markFavorites(topic)">
+                            <mat-icon aria-label="I loved it!">thumb_up</mat-icon>
+                          </button>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-12" *ngIf="displayView=='CHAPTER'">
+              <div class="row">
+                <div class="col-md-4 col-sm-6" *ngFor="let chapter of chapterList">
+                  <div class="book-tables waiter-list">
+                    <div class="media">
+                      <div class="media-left">
+                        <img class="person-card-avatar" src="assets/images/class.jpg">
+                      </div>
+                      <div class="media-body">
+                        <h4 class="media-heading"><strong>{{chapter.displayName}}</strong>
+                          <span class="asigned-table available">10 Topics</span> </h4>
+                      </div>
+
+                    </div>
+                    <ul>
+                      <li>
+                        <div class="text-left btn-holder">
+                          <button mat-icon-button matTooltip="Search Topic">
+                            <mat-icon aria-label="Search Topic" color="primary">image_search</mat-icon>
+                          </button>
+                        </div>
+                      </li>
+                      <li>
+                        <div class="text-right btn-holder">
+                          <button mat-icon-button matTooltip="Chapter Notes">
+                            <mat-icon aria-label="Chapter Notes">note</mat-icon>
+                          </button>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+            <div class="col-md-12" *ngIf="displayView=='SUBJECT'">
+              <div class="row">
+                <div class="col-md-4 col-sm-6" *ngFor="let subject of classSubjectList">
+                  <div class="book-tables waiter-list">
+                    <div class="media">
+                      <div class="media-left">
+                        <img class="person-card-avatar" src="assets/images/class.jpg">
+                      </div>
+                      <div class="media-body">
+                        <h4 class="media-heading"><strong>{{subject.displayName}}</strong>
+                          <span class="asigned-table available">6 Chapters</span> </h4>
+                      </div>
+
+                    </div>
+                    <ul>
+                      <li>Avilable Lesson : 60</li>
+                      <li>
+                        <div class="text-right btn-holder">
+                          <button mat-icon-button matTooltip="Search Chapters">
+                            <mat-icon aria-label="Search Chapters" color="primary">image_search</mat-icon>
+                          </button>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+            <div class="col-md-12" *ngIf="displayView=='CLASS'">
+              <div class="row">
+                <div class="col-md-4 col-sm-6" *ngFor="let class of classList">
+                  <div class="book-tables waiter-list">
+                    <div class="media">
+                      <div class="media-left">
+                        <img class="person-card-avatar" src="assets/images/class.jpg">
+                      </div>
+                      <div class="media-body">
+                        <h4 class="media-heading"><strong>{{class.displayName}}</strong>
+                          <span class="asigned-table available">4 Subjects</span> </h4>
+                      </div>
+
+                    </div>
+                    <ul>
+                      <li>Avilable Videos : 60</li>
+                      <li>
+                        <div class="text-right btn-holder">
+                          <button mat-icon-button matTooltip="Search Subjects">
+                            <mat-icon aria-label="Search Subjects" color="primary">image_search</mat-icon>
+                          </button>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
